--- a/Skipping/seq_class.ipynb
+++ b/Skipping/seq_class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
        "[7174934 rows x 3 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
      "text": [
       "Amount of anomalous sessions in the dataset:   355\n",
       "Amount of normal sessions in the dataset:      659915\n",
-      "total sessiosn in the dataset:                 660270\n",
+      "total sessions in the dataset:                 660270\n",
       "Distribution:                                  0.05379480690695014 %\n"
      ]
     }
@@ -189,14 +189,14 @@
     "count_normal_raw = df_raw[df_raw[\"anomaly\"] == 0][\"SessionID\"].nunique()\n",
     "print(f'Amount of anomalous sessions in the dataset:   {count_anomaly_raw}' )\n",
     "print(f'Amount of normal sessions in the dataset:      {count_normal_raw}')\n",
-    "print(f'total sessiosn in the dataset:                 {count_anomaly_raw + count_normal_raw}')\n",
+    "print(f'total sessions in the dataset:                 {count_anomaly_raw + count_normal_raw}')\n",
     "distribution =  count_anomaly_raw / count_normal_raw \n",
     "print(f'Distribution:                                  {distribution * 100} %')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -217,14 +217,22 @@
     "print(injection_rate)\n",
     "print(injection_amount)\n",
     "# get 20 random sessionIDs from the anomaly dataset\n",
-    "anomaly_sessionIDs = df_anomaly[\"SessionID\"].sample(n=injection_amount, random_state=1).tolist()\n"
+    "anomaly_sessionIDs = df_anomaly[\"SessionID\"].sample(n=injection_amount, random_state=1).tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50026\n"
+     ]
+    }
+   ],
    "source": [
     "df_ = df_normal[df_normal[\"SessionID\"].isin(df_normal[\"SessionID\"].unique()[:nr_of_sessions_used])].copy()\n",
     "\n",
@@ -232,7 +240,7 @@
     "\n",
     "# Only use the columns that are needed -> SessionID, Activity, anomaly\n",
     "df_50k = df_[[\"SessionID\", \"Activity\", \"anomaly\"]]\n",
-    "\n",
+    "print(df_50k[\"SessionID\"].nunique())\n",
     "# remove the sessions with ID in anomaly_sessionIDs from the df_anomaly dataset\n",
     "df_anomaly = df_anomaly[~df_anomaly[\"SessionID\"].isin(anomaly_sessionIDs)].copy()\n",
     "df_anomaly.to_csv(\"gen_sessions/an.csv\", index=False)\n"
@@ -240,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +266,7 @@
        "50026"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1020,7 @@
        "[50026 rows x 5161 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1065,8 +1073,7 @@
      "output_type": "stream",
      "text": [
       "0.9999000599640215\n",
-      "0.9\n",
-      "\n"
+      "0.9\n"
      ]
     }
    ],
@@ -1074,16 +1081,15 @@
     "from sklearn.metrics import accuracy_score, balanced_accuracy_score\n",
     "\n",
     "\n",
-    "predictions = clf.predict(X_test)\n",
-    "\n",
-    "print(accuracy_score(y_test, predictions))\n",
-    "print(balanced_accuracy_score(y_test, predictions))\n",
-    "print()"
+    "clf = tree.DecisionTreeClassifier().fit(X_train, y_train)\n",
+    "_y_predict = clf.predict(X_test)\n",
+    "print(accuracy_score(y_test, _y_predict))\n",
+    "print(balanced_accuracy_score(y_test, _y_predict))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1108,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,22 +1142,6 @@
       "gen_sessions/1000/5_1000.csv 10\n",
       "1.0\n",
       "1.0\n",
-      "\n",
-      "gen_sessions/1000/5_1000.csv 20\n",
-      "0.9999000599640215\n",
-      "0.9\n",
-      "\n",
-      "gen_sessions/1000/5_1000.csv 30\n",
-      "1.0\n",
-      "1.0\n",
-      "\n",
-      "gen_sessions/1000/5_1000.csv 40\n",
-      "1.0\n",
-      "1.0\n",
-      "\n",
-      "gen_sessions/1000/5_1000.csv 50\n",
-      "1.0\n",
-      "1.0\n",
       "\n"
      ]
     },
@@ -1162,7 +1152,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [19], line 43\u001b[0m\n\u001b[0;32m     39\u001b[0m         X_test\u001b[39m.\u001b[39mdrop(columns\u001b[39m=\u001b[39m[column_name], inplace\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m     42\u001b[0m clf \u001b[39m=\u001b[39m tree\u001b[39m.\u001b[39mDecisionTreeClassifier()\n\u001b[1;32m---> 43\u001b[0m clf\u001b[39m.\u001b[39;49mfit(X_train_extra, y_train_extra)\n\u001b[0;32m     45\u001b[0m y_test_predict \u001b[39m=\u001b[39m clf\u001b[39m.\u001b[39mpredict(X_test)\n\u001b[0;32m     47\u001b[0m \u001b[39m#AUC predict\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn [19], line 42\u001b[0m\n\u001b[0;32m     35\u001b[0m \u001b[39m#Make sure that both dataframes have the same columns\u001b[39;00m\n\u001b[0;32m     36\u001b[0m \u001b[39m# for column_name in X_test.columns:\u001b[39;00m\n\u001b[0;32m     37\u001b[0m \u001b[39m#     if column_name not in X_train_extra.columns:\u001b[39;00m\n\u001b[0;32m     38\u001b[0m \u001b[39m#         X_test.drop(columns=[column_name], inplace=True)\u001b[39;00m\n\u001b[0;32m     41\u001b[0m clf \u001b[39m=\u001b[39m tree\u001b[39m.\u001b[39mDecisionTreeClassifier()\n\u001b[1;32m---> 42\u001b[0m clf\u001b[39m.\u001b[39;49mfit(X_train_extra, y_train_extra)\n\u001b[0;32m     44\u001b[0m y_test_predict \u001b[39m=\u001b[39m clf\u001b[39m.\u001b[39mpredict(X_test)\n\u001b[0;32m     46\u001b[0m \u001b[39m#AUC predict\u001b[39;00m\n",
       "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\sklearn\\tree\\_classes.py:969\u001b[0m, in \u001b[0;36mDecisionTreeClassifier.fit\u001b[1;34m(self, X, y, sample_weight, check_input)\u001b[0m\n\u001b[0;32m    939\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mfit\u001b[39m(\u001b[39mself\u001b[39m, X, y, sample_weight\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, check_input\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m):\n\u001b[0;32m    940\u001b[0m     \u001b[39m\"\"\"Build a decision tree classifier from the training set (X, y).\u001b[39;00m\n\u001b[0;32m    941\u001b[0m \n\u001b[0;32m    942\u001b[0m \u001b[39m    Parameters\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    966\u001b[0m \u001b[39m        Fitted estimator.\u001b[39;00m\n\u001b[0;32m    967\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 969\u001b[0m     \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49mfit(\n\u001b[0;32m    970\u001b[0m         X,\n\u001b[0;32m    971\u001b[0m         y,\n\u001b[0;32m    972\u001b[0m         sample_weight\u001b[39m=\u001b[39;49msample_weight,\n\u001b[0;32m    973\u001b[0m         check_input\u001b[39m=\u001b[39;49mcheck_input,\n\u001b[0;32m    974\u001b[0m     )\n\u001b[0;32m    975\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\n",
       "File \u001b[1;32mc:\\Python310\\lib\\site-packages\\sklearn\\tree\\_classes.py:458\u001b[0m, in \u001b[0;36mBaseDecisionTree.fit\u001b[1;34m(self, X, y, sample_weight, check_input)\u001b[0m\n\u001b[0;32m    447\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    448\u001b[0m     builder \u001b[39m=\u001b[39m BestFirstTreeBuilder(\n\u001b[0;32m    449\u001b[0m         splitter,\n\u001b[0;32m    450\u001b[0m         min_samples_split,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    455\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmin_impurity_decrease,\n\u001b[0;32m    456\u001b[0m     )\n\u001b[1;32m--> 458\u001b[0m builder\u001b[39m.\u001b[39;49mbuild(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtree_, X, y, sample_weight)\n\u001b[0;32m    460\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_outputs_ \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m \u001b[39mand\u001b[39;00m is_classifier(\u001b[39mself\u001b[39m):\n\u001b[0;32m    461\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_classes_ \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_classes_[\u001b[39m0\u001b[39m]\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
@@ -1198,7 +1188,6 @@
     "        X_train_extra = pd.concat([X_train, df_gen.drop(columns=[\"anomaly\"])]).fillna(0)\n",
     "        y_train_extra = pd.concat([y_train, df_gen[\"anomaly\"]])\n",
     "        \n",
-    "\n",
     "        \n",
     "        #Make sure that both dataframes have the same columns\n",
     "        for column_name in X_train_extra.columns:\n",
@@ -1206,9 +1195,9 @@
     "                X_test[column_name] = 0\n",
     "\n",
     "        #Make sure that both dataframes have the same columns\n",
-    "        for column_name in X_test.columns:\n",
-    "            if column_name not in X_train_extra.columns:\n",
-    "                X_test.drop(columns=[column_name], inplace=True)\n",
+    "        # for column_name in X_test.columns:\n",
+    "        #     if column_name not in X_train_extra.columns:\n",
+    "        #         X_test.drop(columns=[column_name], inplace=True)\n",
     "        \n",
     "        \n",
     "        clf = tree.DecisionTreeClassifier()\n",
